[gd_scene load_steps=2 format=2]

[ext_resource path="res://World/Camera2D.gd" type="Script" id=1]

[node name="Camera2D" type="Camera2D"]
position = Vector2( 160, 90 )
current = true
smoothing_enabled = true
script = ExtResource( 1 )

[node name="Limits" type="Node" parent="."]

[node name="BottomRight" type="Position2D" parent="Limits"]
position = Vector2( 320, 180 )

[node name="TopLeft" type="Position2D" parent="Limits"]
position = Vector2( -24, -24 )

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
